[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buster-sdk"
version = "0.0.1"
description = "A Python SDK for Buster"
readme = "README.md"
authors = [
  { name = "Buster", email = "hello@buster.so" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine",
    "build",
    "mypy",
    "types-requests"
]

[project.urls]
"Homepage" = "https://github.com/buster-so/buster"
"Bug Tracker" = "https://github.com/buster-so/buster/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/buster"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
